some fixes commands add_element remove_element add UserState update UserStateService update CommandDispatcher update Telegram Token