@@ -1,5 +1,6 @@
 package kz.pandev.bot.telegrambotapplication.command;
 
+import kz.pandev.bot.telegrambotapplication.model.Category;
 import kz.pandev.bot.telegrambotapplication.service.CategoryService;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -13,7 +14,7 @@ import org.telegram.telegrambots.meta.api.objects.replykeyboard.buttons.InlineKe
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
+
 
 @Slf4j
 @Component
@@ -21,7 +22,7 @@ import java.util.stream.Collectors;
 public class RemoveElementCommand implements BotCommand {
 
     private final CategoryService categoryService;
-    private static final int CATEGORIES_PER_PAGE = 5;
+    private static final int ITEMS_PER_PAGE = 5;
 
     @Override
     public String getCommand() {
@@ -31,126 +32,165 @@ public class RemoveElementCommand implements BotCommand {
     @Override
     public void execute(Update update, TelegramLongPollingBot bot) {
         if (update.hasCallbackQuery()) {
-            String callbackData = update.getCallbackQuery().getData();
+            String data = update.getCallbackQuery().getData();
             String chatId = update.getCallbackQuery().getMessage().getChatId().toString();
 
-            if (callbackData.startsWith("DELETE:")) {
-                String categoryName = callbackData.substring("DELETE:".length());
-                try {
-                    categoryService.deleteCategoryByName(categoryName);
-                    sendCallbackNotification(bot, update, "✅ Удалено: " + categoryName);
-                    showCategoryButtonsWithWarning(bot, chatId, 1); // обновляем список
-                } catch (IllegalArgumentException e) {
-                    sendCallbackNotification(bot, update, "❌ Ошибка удаления: " + e.getMessage());
-                }
-            } else if (callbackData.startsWith("PAGE:")) {
-                int page = Integer.parseInt(callbackData.substring("PAGE:".length()));
-                showCategoryButtonsWithWarning(bot, chatId, page);
+            if (data.startsWith("PAGE_CATEGORY:")) {
+                int page = Integer.parseInt(data.substring("PAGE_CATEGORY:".length()));
+                showCategorySelection(bot, chatId, page);
+                return;
             }
-            return;
+
+            if (data.startsWith("SELECT_CATEGORY:")) {
+                Long parentId = Long.parseLong(data.substring("SELECT_CATEGORY:".length()));
+                Category parent = categoryService.getCategoryById(parentId);
+                if (parent != null) {
+                    showSubcategorySelection(bot, chatId, parent);
+                } else {
+                    sendCallback(bot, update, "❌ Родительская категория не найдена.");
+                }
+                return;
+            }
+
+            if (data.startsWith("DELETE_SUBCATEGORY:")) {
+                String[] parts = data.split(":", 3);
+                Long childId = Long.parseLong(parts[1]);
+                Long parentId = Long.parseLong(parts[2]);
+
+                try {
+                    Category child = categoryService.getCategoryById(childId);
+                    categoryService.deleteCategoryById(childId);
+                    sendCallback(bot, update, "✅ Подкатегория \"" + child.getName() + "\" удалена.");
+                } catch (Exception e) {
+                    sendCallback(bot, update, "❌ Ошибка: " + e.getMessage());
+                }
+                Category parent = categoryService.getCategoryById(parentId);
+                if (parent != null) {
+                    showSubcategorySelection(bot, chatId, parent);
+                }
+                return;
+            }
+
+            if (data.startsWith("DELETE_CATEGORY:")) {
+                Long parentId = Long.parseLong(data.substring("DELETE_CATEGORY:".length()));
+                try {
+                    Category parent = categoryService.getCategoryById(parentId);
+                    categoryService.deleteCategoryById(parentId);
+                    sendCallback(bot, update, "✅ Категория \"" + parent.getName() + "\" и все её подкатегории удалены.");
+                } catch (Exception e) {
+                    sendCallback(bot, update, "❌ Ошибка: " + e.getMessage());
+                }
+                showCategorySelection(bot, chatId, 1);
+                return;
+            }
         }
 
         if (update.hasMessage() && update.getMessage().hasText()) {
+            String text = update.getMessage().getText().trim();
             String chatId = update.getMessage().getChatId().toString();
-            String messageText = update.getMessage().getText().trim();
-
-            if (messageText.equals("➖ Удалить элемент")) {
-                showCategoryButtonsWithWarning(bot, chatId, 1);
-            } else {
-                String[] parts = messageText.split("\\s+");
-                if (parts.length == 2) {
-                    String categoryName = parts[1];
-                    try {
-                        categoryService.deleteCategoryByName(categoryName);
-                        sendText(bot, chatId, "✅ Категория '" + categoryName + "' успешно удалена.");
-                    } catch (IllegalArgumentException e) {
-                        sendText(bot, chatId, "❌ Ошибка: " + e.getMessage());
-                    }
-                } else {
-                    sendText(bot, chatId, "❗ Неправильный формат. Пример: /removeelement НазваниеКатегории");
-                }
+            if ("➖ Удалить элемент".equals(text)) {
+                showCategorySelection(bot, chatId, 1);
             }
         }
     }
 
-    private void showCategoryButtonsWithWarning(TelegramLongPollingBot bot, String chatId, int page) {
-        List<String> categoryNames = categoryService.getAllCategoryDtos().stream()
-                .map(dto -> dto.getName())
-                .collect(Collectors.toList());
+    private void showCategorySelection(TelegramLongPollingBot bot, String chatId, int page) {
+        List<Category> roots = categoryService.getAllCategories().stream()
+                .filter(c -> c.getParent() == null)
+                .toList();
 
-        List<String> buttonTexts = categoryService.getAllCategoryDtos().stream()
-                .map(dto -> (dto.isParent() ? "ROOT " : "") + dto.getName())
-                .collect(Collectors.toList());
+        int total = roots.size();
+        int start = (page - 1) * ITEMS_PER_PAGE;
+        int end = Math.min(start + ITEMS_PER_PAGE, total);
 
-        int startIndex = (page - 1) * CATEGORIES_PER_PAGE;
-        int endIndex = Math.min(startIndex + CATEGORIES_PER_PAGE, categoryNames.size());
-
-        List<String> categoriesToShow = categoryNames.subList(startIndex, endIndex);
         List<List<InlineKeyboardButton>> rows = new ArrayList<>();
-
-        for (int i = startIndex; i < endIndex; i++) {
-            InlineKeyboardButton button = new InlineKeyboardButton();
-            button.setText(buttonTexts.get(i));
-            button.setCallbackData("DELETE:" + categoryNames.get(i)); // строгое имя
-            rows.add(List.of(button));
+        for (int i = start; i < end; i++) {
+            Category cat = roots.get(i);
+            rows.add(List.of(
+                    InlineKeyboardButton.builder()
+                            .text(cat.getName())
+                            .callbackData("SELECT_CATEGORY:" + cat.getId()) // <-- Исправлено: используй ID, а не название
+                            .build()
+            ));
         }
 
-
-        // Навигация
-        if (startIndex > 0) {
-            InlineKeyboardButton prevButton = new InlineKeyboardButton("◀️ Предыдущая");
-            prevButton.setCallbackData("PAGE:" + (page - 1));
-            rows.add(List.of(prevButton));
+        if (start > 0) {
+            rows.add(List.of(
+                    InlineKeyboardButton.builder()
+                            .text("◀️ Назад")
+                            .callbackData("PAGE_CATEGORY:" + (page - 1))
+                            .build()
+            ));
+        }
+        if (end < total) {
+            rows.add(List.of(
+                    InlineKeyboardButton.builder()
+                            .text("▶️ Вперёд")
+                            .callbackData("PAGE_CATEGORY:" + (page + 1))
+                            .build()
+            ));
         }
 
-        if (endIndex < categoryNames.size()) {
-            InlineKeyboardButton nextButton = new InlineKeyboardButton("▶️ Следующая");
-            nextButton.setCallbackData("PAGE:" + (page + 1));
-            rows.add(List.of(nextButton));
-        }
-
-        InlineKeyboardMarkup markup = new InlineKeyboardMarkup(rows);
-
-        String text = """
-                ⚠️ Внимание!
-                Если вы удалите родительскую категорию (ROOT), все дочерние категории тоже будут удалены.
-
-                👇 Выберите категорию для удаления:
-                """;
-
-        SendMessage message = SendMessage.builder()
-                .chatId(chatId)
-                .text(text)
-                .replyMarkup(markup)
-                .build();
-
-        try {
-            bot.execute(message);
-        } catch (Exception e) {
-            log.error("Ошибка при отправке клавиатуры: {}", e.getMessage());
-        }
+        InlineKeyboardMarkup mk = new InlineKeyboardMarkup(rows);
+        send(bot, chatId,
+                String.format("👇 Выберите категорию (страница %d/%d):", page, (int) Math.ceil((double) total / ITEMS_PER_PAGE)),
+                mk
+        );
     }
 
-    private void sendText(TelegramLongPollingBot bot, String chatId, String text) {
+    private void showSubcategorySelection(TelegramLongPollingBot bot, String chatId, Category parent) {
+        List<Category> subs = categoryService.getAllCategories().stream()
+                .filter(c -> c.getParent() != null && c.getParent().getId().equals(parent.getId()))
+                .toList();
+
+        StringBuilder header = new StringBuilder();
+        header.append("👇 Выберите подкатегорию для удаления из \"").append(parent.getName()).append("\":\n\n")
+                .append("⚠️ Если вы удалите категорию, то все её подкатегории тоже будут удалены.\n\n");
+
+        List<List<InlineKeyboardButton>> rows = new ArrayList<>();
+        for (Category c : subs) {
+            rows.add(List.of(
+                    InlineKeyboardButton.builder()
+                            .text(c.getName())
+                            .callbackData("DELETE_SUBCATEGORY:" + c.getId() + ":" + parent.getId()) // <-- Используем ID подкатегории и родителя
+                            .build()
+            ));
+        }
+
+        rows.add(List.of(
+                InlineKeyboardButton.builder()
+                        .text("🗑️ Удалить категорию")
+                        .callbackData("DELETE_CATEGORY:" + parent.getId()) // <-- Используем ID родительской категории
+                        .build()
+        ));
+
+        InlineKeyboardMarkup mk = new InlineKeyboardMarkup(rows);
+        send(bot, chatId, header.toString(), mk);
+    }
+
+    private void send(TelegramLongPollingBot bot, String chatId, String text, InlineKeyboardMarkup mk) {
         try {
             bot.execute(SendMessage.builder()
                     .chatId(chatId)
                     .text(text)
-                    .build());
+                    .replyMarkup(mk)
+                    .build()
+            );
         } catch (Exception e) {
-            log.error("Ошибка при отправке сообщения: {}", e.getMessage());
+            log.error("Ошибка при отправке сообщения: {}", e.getMessage(), e);
         }
     }
 
-    private void sendCallbackNotification(TelegramLongPollingBot bot, Update update, String message) {
+    private void sendCallback(TelegramLongPollingBot bot, Update update, String text) {
         try {
             bot.execute(AnswerCallbackQuery.builder()
                     .callbackQueryId(update.getCallbackQuery().getId())
-                    .text(message)
+                    .text(text)
                     .showAlert(false)
-                    .build());
+                    .build()
+            );
         } catch (Exception e) {
-            log.error("Ошибка при отправке callback-уведомления: {}", e.getMessage());
+            log.error("Ошибка при обработке callback: {}", e.getMessage(), e);
         }
     }
 }
